replace throttle with request animation frame & fix scrollbar

--- a/src/components/Elements/Footer/Footer.scss
+++ b/src/components/Elements/Footer/Footer.scss
@@ -42,7 +42,7 @@
 
           & > * {
             pointer-events: auto;
-            transition: opacity .8s ease-out;
+            transition: opacity .6s ease-out;
           }
 
           &:hover > * {
