--- a/src/components/Elements/Navbar/Navbar.scss
+++ b/src/components/Elements/Navbar/Navbar.scss
@@ -6,8 +6,8 @@
   left: 0;
   width: 100vw;
   z-index: 99;
-  transform: translateY(0);
-  transition: transform .4s ease-out;
+  transform: translateY(-100%);
+  transition: transform .3s ease-out;
 
   &__wrapper {
     display: flex;
@@ -286,8 +286,8 @@
   }
 }
 
-.nav-close {
-  transform: translateY(-100%);
+.nav-open {
+  transform: translateY(0);
 }
 
 .tablet__only {
@@ -321,7 +321,7 @@
         width: 1.5rem;
         height: .1rem;
         background-color: $jet;
-        transition: transform .8s ease-out;
+        transition: transform .4s ease-out;
       }
 
       &.active {
