--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,7 +12,7 @@ body {
   font-family: $font;
   scroll-behavior: smooth;
   -ms-overflow-style: none;
-  scrollbar-width: none;
+  scrollbar-width: 0;
 
   &::-webkit-scrollbar {
     display: none;
